# imgmeta

./: .gitignore  pyproject.toml  script.py
imgmeta/: __init__.py  database.py  helper.py  main.py  meta.py  model.py  script.py
tests/: test_imgmeta.py
