[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "imgmeta"
authors = [{name = "BaoHengtao", email = "baohengtao@users.noreply.github.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["geopy", "rich", "typer"]

[project.scripts]
imgmeta = 'imgmeta.script:app'

[project.urls]
Home = "https://github.com/baohengtao/imgmeta"
